8071278: Fix the closure mess in G1RemSet::refine_card()

Remove the use of many nested closure in the code to refine a card.

Reviewed-by: kbarrett, sjohanss